--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -9,7 +9,6 @@
 	height: 100%;
 	background: url(kitchen2.jpg);
 	background-size: cover;
-	background-color: #272727;
 	background-position: center center;
 	z-index: -1;
 
